grad-releaseGRAD2-1929 Refactoring/Linting educ-grad-assesment-api